Added JWT authentication
